# vapoursynth-scxvid

./: meson.build  pyproject.toml  readme.rst
.github/workflows/: build.yml
src/: scxvid.cpp
